[package]
name = "Egrex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.40", features = ["derive"] }
fast-socks5 = "1.0.0"
rand = "0.10.1"
serde = {version="1.0.228",features=["derive"]}
tokio = {version ="1.52.3",features=["full"]}
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
